--- a/hack_hustlers/pubspec.yaml
+++ b/hack_hustlers/pubspec.yaml
@@ -35,12 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.25.4
+  # firebase_core: ^2.25.4
   firebase_auth: ^4.19.1
   google_sign_in: ^6.2.1
   firebase_storage: ^11.6.6
   firebase: ^9.0.3
   cloud_firestore: ^4.15.5
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.0
+
 
 dev_dependencies:
   flutter_test:
