--- a/hack_hustlers/pubspec.yaml
+++ b/hack_hustlers/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '3.3.0'
+  sdk: '>=3.3.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -41,6 +41,8 @@ dependencies:
   firebase_storage: ^11.6.6
   firebase: ^9.0.3
   cloud_firestore: ^4.15.5
+  flutter_map: ^4.0.0
+  latlong2: ^0.8.0
 
 dev_dependencies:
   flutter_test:
