--- a/hack_hustlers/pubspec.yaml
+++ b/hack_hustlers/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   cloud_firestore: ^4.15.5
   flutter_map: ^4.0.0
   latlong2: ^0.8.0
+  fluttertoast: ^8.2.4
+  image_picker:
 
 dev_dependencies:
   flutter_test:
