--- a/hack_hustlers/pubspec.yaml
+++ b/hack_hustlers/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   latlong2: ^0.8.0
   fluttertoast: ^8.2.4
   image_picker:
+  geolocator: ^9.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,7 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
