--- a/hack_hustlers/pubspec.yaml
+++ b/hack_hustlers/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   fluttertoast: ^8.2.4
   image_picker:
   geolocator: ^9.0.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
