--- a/hack_hustlers/android/app/src/main/AndroidManifest.xml
+++ b/hack_hustlers/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
         android:label="hack_hustlers"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
-        tools:replace="android:label"> 
+        tools:replace="android:label"
+        android:enableOnBackInvokedCallback="true">
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
